--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ a.navbar-brand{
 }
 
 /*footer styling*/
+/*
 .page-footer{
     background-color: rgb(92, 90, 90);
     margin-top: 50px;
@@ -15,6 +16,7 @@ a.navbar-brand{
     bottom: 0;
     width: 100%;
 }
+/*
 
 .footer-copyright{
     color:white;
@@ -36,15 +38,16 @@ h3{
 }
 
 /* fontstyling for text*/
+/*
 p{
    font-family: Arial, Helvetica, sans-serif;
    font-size: x-large;
    padding:10px;
-}
+}/*
 
 /* body background*/
 body{
-    background-color: rgb(223, 222, 222);
+    background-color: rgba(160, 160, 160, 0.287);
 }
 .col-md-12{
     background-color: white;
@@ -82,25 +85,24 @@ body{
     margin-top: 15px;
 }
 
-
+/*Cell Padding*/
 /* table text adjustments*/
-tr>th:nth-child(1),
-tr>th:nth-child(3),
-tr>th:nth-child(6),
-tr>th:nth-child(7),
-tr>th:nth-child(8),
-tr>th:nth-child(9),
-tr>th:nth-child(10),
-tr>td:nth-child(1),
-tr>td:nth-child(3),
-tr>td:nth-child(6),
-tr>td:nth-child(7),
-tr>td:nth-child(8),
-tr>td:nth-child(9),
-tr>td:nth-child(10) {
+tr>th:nth-child(0),
+tr>th:nth-child(0),
+tr>th:nth-child(0),
+tr>th:nth-child(0),
+tr>th:nth-child(0),
+tr>th:nth-child(0),
+tr>th:nth-child(0),
+tr>td:nth-child(0),
+tr>td:nth-child(0),
+tr>td:nth-child(0),
+tr>td:nth-child(0),
+tr>td:nth-child(0),
+tr>td:nth-child(0),
+tr>td:nth-child(0) {
     text-align: center;
     }
-
 
 
 /* small screen adjustments*/
