--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* navbar styling*/
+/* navbar css styles*/
 a.navbar-brand{
     margin-left: 10px;
     padding: 10px;
@@ -7,23 +7,7 @@ a.navbar-brand{
     font-size: 25px;
 }
 
-/*footer styling*/
-/*
-.page-footer{
-    background-color: rgb(92, 90, 90);
-    margin-top: 50px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-/*
-
-.footer-copyright{
-    color:white;
-    border-top: 5px solid rgb(155, 148, 58)
-}
-
-/* header styling*/
+/* header css styles*/
 h3{
     color: rgb(81, 175, 160);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -31,19 +15,12 @@ h3{
     font-size: x-large;
 }
 
-/* image styling*/
+/* image css styles*/
 .img-thumbnail{
     padding:10px;
     border: none;
 }
 
-/* fontstyling for text*/
-/*
-p{
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: x-large;
-   padding:10px;
-}/*
 
 /* body background*/
 body{
@@ -59,7 +36,7 @@ body{
 .pic{
     border: 3px solid rgb(81, 175, 160);
 }
-/* navbar styling*/
+/* navbar css styles*/
 .navbar{
     padding-top:0px;
     padding-bottom: 0px;
@@ -74,7 +51,7 @@ body{
     margin: 0;
 }
 
-/* content styling*/
+/* content css styles*/
 .content {
     padding-top: 50px;
     padding-bottom: 80px;
@@ -84,26 +61,6 @@ body{
 .content.bg-white {
     margin-top: 15px;
 }
-
-/*Cell Padding*/
-/* table text adjustments*/
-tr>th:nth-child(0),
-tr>th:nth-child(0),
-tr>th:nth-child(0),
-tr>th:nth-child(0),
-tr>th:nth-child(0),
-tr>th:nth-child(0),
-tr>th:nth-child(0),
-tr>td:nth-child(0),
-tr>td:nth-child(0),
-tr>td:nth-child(0),
-tr>td:nth-child(0),
-tr>td:nth-child(0),
-tr>td:nth-child(0),
-tr>td:nth-child(0) {
-    text-align: center;
-    }
-
 
 /* small screen adjustments*/
 @media(max-width:767px){
